
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u_char ;


 int exit (int) ;
 int printf (char*,...) ;
 int quake2_build_pck (int,int ,int ,char*,int,char*) ;
 int send_recv (int,char*,int,char*,int,int) ;
 int sscanf (char*,char*,int*) ;
 char* strchr (char*,char) ;

int get_quake2_chall(int sd, u_char *buff, int buffsz) {
    int len,
            challenge;
    u_char *p,
            *text;

    text = buff + 4;

    len = quake2_build_pck(
        0xffffffff,
        0,
        0,
        buff,
        buffsz,
        "getchallenge\n");
    len = send_recv(sd, buff, len, buff, buffsz, 1);

    p = strchr(text, ' ');
    if(!p) {
        printf("\nError: No challenge key in the server's reply:\n%s\n\n", text);
        exit(1);
    }
    sscanf(p + 1, "%d", &challenge);
    printf("    challenge: %d\n", challenge);
    return(challenge);
}
